--- a/src/templates/screens/AssignIssue.vm
+++ b/src/templates/screens/AssignIssue.vm
@@ -1,3 +1,5 @@
+$page.setTitle("Assign Users to Issue")
+
 #if ( !$actionLink )
     #set ( $actionLink = $link.setPage("AssignIssue.vm").setAction("AssignIssue").addPathInfo("nextTemplate", "Index.vm") )
 #end
@@ -11,9 +13,7 @@
 #if ( $data.Parameters.getString("action") && $data.Parameters.getString("action") == "AssignIssue" )
    #set ( $reentry = true )
 #end
-  <div id="AssignIssue.vm">
-
-   <h1>Assign Issue (2.1.3)</h1>
+<div class="app" id="assignissue">
 
 #if ($reentry)
     <p><strong class="alert">
@@ -22,15 +22,25 @@
 #end
 
    <form action="$actionLink" method="get">
+    <p class="functnbar">
+        <input type="submit" name="eventSubmit_doSubmit" 
+                 value="submit" />
+        <input type="submit" name="eventSubmit_doCancel" 
+                 value="cancel" />
+        <input type="reset" value="reset" />
+    </p>
+
+   <h3>$page.Title</h3>
+
 #set ( $issueGroup = $intake.Issue.Default )
     <input type="hidden" name="$issueGroup.Id.Key" value="$issueGroup.Id" />
 
-    <table border="0" cellpadding="3" cellspacing="2">
-     <tr>
-      <th>Select</th>
-
-      <th>Selected</th>
-     </tr>
+	<div class="sidebyside">
+    <table cellpadding="3" cellspacing="2" border="1" width="100%">
+    <tr>
+    <th>Users</th>	
+    <th>Assignees</th>
+    </tr>
 
      <tr>
       <td>
@@ -51,8 +61,8 @@
     #end
 #end
       </select>
-
-
+    <input type="submit" name="eventSubmit_doAdd" 
+                     value="Add" />
       </td>
       <td>
 
@@ -73,39 +83,31 @@
     #end
 #end
       </select>
-
+      <input type="submit" name="eventSubmit_doRemove" 
+                 value="Remove" />
 
       </td>
      </tr>
-
-     <tr>
-      <td><input type="submit" name="eventSubmit_doAdd" 
-                 value="Add" /></td>
-
-      <td><input type="submit" name="eventSubmit_doRemove" 
-                 value="Remove" /></td>
-     </tr>
     </table>
-
+</div>
+	
 #set ( $atch = $scarabR.Attachment )
 #set( $intakeAttachment = $intake.Attachment.mapTo($atch) )
 
-    <dl>
-     <dt>Note #fieldErrorMsg($intakeAttachment.DataAsString "")</dt>
-     <dd>
+ <h3>Note #fieldErrorMsg($intakeAttachment.DataAsString "")</h3>
+ <p>
        <textarea name="$intakeAttachment.DataAsString.Key" rows="4" 
             cols="40" class="text">$!intakeAttachment.DataAsString</textarea>
-     </dd>
-    </dl>
-
-    <p>
-        <input type="submit" name="eventSubmit_doSubmit" 
-                 value="submit" />
-        <input type="submit" name="eventSubmit_doCancel" 
-                 value="cancel" />
-        <input type="reset" value="reset" />
-    </p>
+ </p>
+ 
+<p class="functnbar">
+    <input type="submit" name="eventSubmit_doSubmit" 
+             value="submit" />
+    <input type="submit" name="eventSubmit_doCancel" 
+             value="cancel" />
+    <input type="reset" value="reset" />
+</p>
 
    $intake.declareGroups()
    </form>
-  </div>
+</div>
