--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -8,7 +8,7 @@ $page.setTitle("Scarab Links")
 <li><a href="$link.setPage("Index.vm")">Index.vm</a></li>
 <li><a href="$link.setPage("Register.vm")">Register.vm</a></li>
 <li><a href="$link.setPage("Login.vm")">Login.vm</a></li>
-<li><a href="$link.setPage("ViewIssue.vm").addPathInfo("id", 1)">ViewIssue.vm?id=1</a> </li>
+<li><a href="$link.setPage("IssueList.vm")">IssueList.vm</a></li>
 <li><a href="$link.setPage("Search.vm")">Custom Query</a></li>
 <li><a href="$link.setPage("AdvancedQuery.vm")">Advanced Query</a></li>
 <li><a href="$link.setPage("entry,Wizard1.vm")">Enter Issue</a></li>
@@ -18,6 +18,7 @@ $page.setTitle("Scarab Links")
 <li><a href="$link.setPage("QueryList.vm")">Stored Query List</a></li>
 <li><a href="$link.setPage("reports,Step1.vm")">Reports (not working)</a></li>
 <li><a href="$link.setPage("Approval.vm")">Approval.vm</a></li>
+<li><a href="$link.setPage("ViewIssue.vm").addPathInfo("id", 1)">ViewIssue.vm?id=1</a></li>
 </ul>
 
 <h3>Admin Pages</h3>
@@ -25,6 +26,7 @@ $page.setTitle("Scarab Links")
 <li>
     <a href="$link.setPage("admin,GlobalAttributeShow.vm")">admin,GlobalAttributeShow.vm</a>
 </li>
+<!--
 <li>
     <a 
 href="$link.setPage("admin,AttributeShow.vm")">admin,AttributeShow.vm</a> 
@@ -33,6 +35,7 @@ href="$link.setPage("admin,AttributeShow.vm")">admin,AttributeShow.vm</a>
     <a 
 href="$link.setPage("admin,ModuleAttributeEditor.vm")">admin,ModuleAttributeEditor.vm</a> 
 (not working currently)</li>
+-->
 <li>
     <a href="$link.setPage("FluxIndex.vm")">Flux</a>
 </li>
