changed screen level function "function-bar" to black w/white text... this is now the highest level of functional nav... level 2 is gray with black letters... used in cases where only part of a screen is being addressed by a function or set of functions.
this can be seen in changes made to 2.1.4.0

thanks\
B

--- a/www/ui/csi/style/main.css
+++ b/www/ui/csi/style/main.css
@@ -148,8 +148,18 @@ dd	{
 .functnbar {
 	vertical-align: middle;
 	padding: 3px;
+	margin-top: .5em;
 	}
 .functnbar th, .functnbar td {
+	color: #fff;
+	padding-left: 2px;
+	padding-right: 2px;
+	}
+.functnbar2 {
+	vertical-align: middle;
+	padding: 3px;
+	}
+.functnbar2 th, .functnbar2 td {
 	color: black;
 	padding-left: 2px;
 	padding-right: 2px;
