--- a/src/templates/screens/reports/Report_1.vm
+++ b/src/templates/screens/reports/Report_1.vm
@@ -61,11 +61,19 @@
 		
 <p>page 1 of 1</p>
 
+#set ( $action = $link.setPage("Links.vm").setAction("GenerateReport") )
+<form method="get" action="$action">
+
 <p class="functnbar">
-    <input type="submit" value="save this report" />&nbsp;
-    <input type="submit" value="print" />&nbsp;
-    <input type="submit" value="cancel" class="button" />
+    <input type="submit" value="save this report" 
+        name="eventSubmit_doSavereport" />&nbsp;
+    <input type="submit" value="print" name="eventSubmit_doPrint" />&nbsp;
+    <input type="submit" value="done" name="eventSubmit_doCancel" />
 </p>
+
+#addReportHiddenInputs($report "reports,Report_1.vm")
+$intake.declareGroups()
+</form>
 
 </div>
 
