--- a/src/templates/screens/reports/Step3_2b.vm
+++ b/src/templates/screens/reports/Step3_2b.vm
@@ -1,147 +1,10 @@
-<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
-"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-<html>
+#set ( $report = $scarabR.Report )
+#set ( $intakeReport = $intake.Report.mapTo($report) )
+#set ( $action = $link.setPage("reports,Step3_2b.vm").setAction("GenerateReport") )
 
-<head>
-	<title>Define report (2.4.1)</title>
-	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
-</head>
+<div class="app" id="div2-4-1-step5b">
 
-<body>
-<form action="#" method="get">
-
-	<!-- SourceCast -->
-	<div id="banner">
-		<table border="0" cellspacing="12" cellpadding="0" width="100%">
-		<tr>
-		
-		<td>
-		<div align="right" id="loginstatus">
-			<div>
-				Logged in as: <strong class="username">User XX</strong>
-			</div>
-			<div>
-				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
-			</div>
-		</div>
-		</td>
-		</tr>
-		</table>
-	</div>
-	<!-- SourceCast -->
-	
-	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
-<!-- Structural Elements -->
-	
-	<!-- SourceCast -->
-	<div id="navcol">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">Start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects</a>/<a href="#">Categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Reports</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin Functions</a>
-			</th>
-			</tr>
-		</table>
-	</div>
-	<!-- SourceCast -->
-	
-	<!-- SourceCast -->
-	<div id="helptext">
-		<table border="0" cellspacing="0" cellpadding="3" width="100%">
-		<tr>
-		<th>How do I...?</th>
-		</tr>
-		<tr>
-		<td>
-			<div> 
-				<a href="#">[Go to help index]</a>
-			</div>
-			<div> 
-				<a href="#">Use this page</a>...
-			</div>
-			<div>
-				<a href="#">Learn about a project</a>...
-			</div>
-			<div>
-				<a href="#">Join a project</a>...
-			</div>
-		</td>
-		</tr>
-		</table>
-	</div>
-	<!-- SourceCast -->
-	
-<!-- Structural Elements -->
-</td>
-<td id="bodycol">
-<!-- Structural Elements -->
-
-	<!-- Scarab - App -->
-	<div id="topmodule">
-		<table border="0" cellspacing="0" cellpadding="3" width="100%">
-		<tr>
-			<td nowrap="nowrap">
-			<select>
-			<option>saved queries</option>
-			<option>query one</option>
-			<option>query two</option>
-			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
-			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
-			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
-			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
-			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
-			</td>			
-		</tr>
-		</table>
-	</div>
-	<!-- Scarab - App -->
-	
-	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step5b">
-		<h2>Define report (2.4.1)</h2>
+<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
@@ -153,253 +16,108 @@
 			</table>
 		</div>
 		
-		<p class="functnbar"><a href="#" title="define row/column criteria">3a: Define row/column criteria</a> | <strong>3b: Select row/column content</strong></p>
+		<p class="functnbar">
+            <a href="#" title="define row/column criteria">
+                3a: Define row/column criteria</a> | <strong>
+            3b: Select row/column content</strong>
+        </p>
 		
-		<h3>Select row/column content</h3>	  
+<h3>Select row/column content</h3>	  
+
+<form method="get" action="$action">
 		
-		<div class="axial">
-			<table border="1" cellspacing="2" cellpadding="3">
-			<tr>
+<div class="axial">
+	<table border="1" cellspacing="2" cellpadding="3">
+		<tr>
 			<th>Row content</th>
-			<td><select multiple="multiple" size="15">
-			<option>Attribute X</option>
-			<option>&nbsp;&nbsp;option X.1</option>
-			<option>&nbsp;&nbsp;option X.2</option>
-			<option>&nbsp;&nbsp;option X.3</option>
-			<option>&nbsp;&nbsp;option X.4</option>
-			<option>&nbsp;&nbsp;option X.5</option>
-			<option>&nbsp;&nbsp;option X.6</option>
-			<option>----------------------------------</option>
-			<option>Attribute Y</option>
-			<option>&nbsp;&nbsp;option Y.1</option>
-			<option>&nbsp;&nbsp;option Y.2</option>
-			<option>&nbsp;&nbsp;option Y.3</option>
-			<option>&nbsp;&nbsp;option Y.4</option>
-			<option>&nbsp;&nbsp;option Y.5</option>
-			<option>&nbsp;&nbsp;option Y.6</option>
-			<option>&nbsp;&nbsp;option Y.7</option>
-			<option>&nbsp;&nbsp;option Y.8</option>	
-			<option>&nbsp;&nbsp;option Y.9</option>
-			<option>&nbsp;&nbsp;option Y.10</option>
-			<option>----------------------------------</option>
-			<option>Attribute Z</option>
-			<option>&nbsp;&nbsp;option Z.1</option>
-			<option>&nbsp;&nbsp;option Z.2</option>
-			<option>&nbsp;&nbsp;option Z.3</option>
-			<option>&nbsp;&nbsp;option Z.4</option>
-			<option>&nbsp;&nbsp;option Z.5</option>
-			<option>&nbsp;&nbsp;option Z.6</option>
-			<option>&nbsp;&nbsp;option Z.7</option>
-			<option>&nbsp;&nbsp;option Z.8</option>	
-			<option>&nbsp;&nbsp;option Z.9</option>
-			<option>&nbsp;&nbsp;option Z.10</option>
-			<option>----------------------------------</option>
-			</select>			
+			<td>
+			<select name="$intakeReport.Axis1AttributesAndOptions.Key" 
+                multiple="multiple" size="15">
+
+                #attributeOptionOptionList( $report.OptionsMinusGroupedOptions $report.Axis1AttributesAndOptions )
+			</select>
 			</td>
-			</tr>
+		</tr>
 			
-			<tr>
+		<tr>
 			<th>column: date(s)</th>
 			<td>
 		
-<table border="1" cellspacing="2" cellpadding="3">
-<tr>
-<th nowrap="nowrap">date #</th>
-<th>date setting</th>
-</tr>
+                <table border="1" cellspacing="2" cellpadding="3">
+                    <tr>
+                        <th nowrap="nowrap">date #</th>
+                        <th>date setting</th>
+                    </tr>
 
-<tr class="b">
-<td width="120"><input type="checkbox" />&nbsp;date 1:</td>
-<td><select>
-<option>Jan</option>
-<option>Feb</option>
-<option>Mar</option>
-<option>Apr</option>
-<option>May</option>
-<option>Jun</option>
-<option>Jul</option>
-<option>Aug</option>
-<option>Sep</option>
-<option>Oct</option>
-<option>Nov</option>
-<option>Dec</option>
-</select>&#160;<select>
-<option>01</option>
-<option>02</option>
-<option>03</option>
-<option>04</option>
-<option>05</option>
-<option>06</option>
-<option>07</option>
-<option>08</option>
-<option>09</option>
-<option>10</option>
-<option>11</option>
-<option>12</option>
-<option>13</option>
-<option>14</option>
-<option>15</option>
-<option>16</option>
-<option>17</option>
-<option>18</option>
-<option>19</option>
-<option>20</option>
-<option>21</option>
-<option>22</option>
-<option>23</option>
-<option>24</option>
-<option>25</option>
-<option>26</option>
-<option>27</option>
-<option>28</option>
-<option>29</option>
-<option>30</option>
-<option>31</option>
-</select>&#160;<select>
-<option>1999</option>
-<option>2000</option>
-<option>2001</option>
-<option>2002</option>
-<option>2003</option>
-</select> - <select>
-<option>01:00</option>
-<option>02:00</option>
-<option>03:00</option>
-<option>04:00</option>
-<option>05:00</option>
-<option>06:00</option>
-<option>07:00</option>
-<option>08:00</option>
-<option>09:00</option>
-<option>10:00</option>
-<option>11:00</option>
-<option>12:00</option>
-<option>13:00</option>
-<option>14:00</option>
-<option>15:00</option>
-<option>16:00</option>
-<option>17:00</option>
-<option>18:00</option>
-<option>19:00</option>
-<option>20:00</option>
-<option>21:00</option>
-<option>22:00</option>
-<option>23:00</option>
-<option>24:00</option>
-</select></td>
-</tr>
-					
-<tr class="b">
-<td width="120"><input type="checkbox" />&nbsp;date 2:</td>
-<td><select>
-<option>Jan</option>
-<option>Feb</option>
-<option>Mar</option>
-<option>Apr</option>
-<option>May</option>
-<option>Jun</option>
-<option>Jul</option>
-<option>Aug</option>
-<option>Sep</option>
-<option>Oct</option>
-<option>Nov</option>
-<option>Dec</option>
-</select>&#160;<select>
-<option>01</option>
-<option>02</option>
-<option>03</option>
-<option>04</option>
-<option>05</option>
-<option>06</option>
-<option>07</option>
-<option>08</option>
-<option>09</option>
-<option>10</option>
-<option>11</option>
-<option>12</option>
-<option>13</option>
-<option>14</option>
-<option>15</option>
-<option>16</option>
-<option>17</option>
-<option>18</option>
-<option>19</option>
-<option>20</option>
-<option>21</option>
-<option>22</option>
-<option>23</option>
-<option>24</option>
-<option>25</option>
-<option>26</option>
-<option>27</option>
-<option>28</option>
-<option>29</option>
-<option>30</option>
-<option>31</option>
-</select>&#160;<select>
-<option>1999</option>
-<option>2000</option>
-<option>2001</option>
-<option>2002</option>
-<option>2003</option>
-</select> - <select>
-<option>01:00</option>
-<option>02:00</option>
-<option>03:00</option>
-<option>04:00</option>
-<option>05:00</option>
-<option>06:00</option>
-<option>07:00</option>
-<option>08:00</option>
-<option>09:00</option>
-<option>10:00</option>
-<option>11:00</option>
-<option>12:00</option>
-<option>13:00</option>
-<option>14:00</option>
-<option>15:00</option>
-<option>16:00</option>
-<option>17:00</option>
-<option>18:00</option>
-<option>19:00</option>
-<option>20:00</option>
-<option>21:00</option>
-<option>22:00</option>
-<option>23:00</option>
-<option>24:00</option>
-</select></td>
-</tr>
-</table>
+#set ($finalCount = 1)
+#set ($finalKey = "0" )
+#foreach ($date in $report.ReportDates)
+    #set ($intakeDate = $intake.ReportDate.mapTo($date))
+                    #rows()
+                        <td width="120">
+                            <input type="checkbox" 
+                                name="$intakeDate.Selected.Key" />
+                            &nbsp;date $velocityCount:
+                        </td>
+                        <td>
+    #if ($intakeDate.Date.isValid())
+        ## don't show the last entered value
+        #set ($value = $intakeDate.Date)
+    #else
+        #set ($value = $format.getDate("MM/dd/yy HH:mm", $date.Date))
+    #end
+                <input type="text" size="20" name="$intakeDate.Date.Key" 
+                    value="$intakeDate.Date" />
+                        </td>
+                    </tr>
+    #set ($finalCount = $velocityCount + 1)
+    #set ($finalKey = "$velocityCount" )
+#end
 
-<p><input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" class="button" /></p>
+#set ( $reportDate = $report.NewReportDate )
+    $reportDate.setQueryKey($finalKey)
+    #set ($intakeDate = $intake.ReportDate.mapTo($reportDate))
+	#indexedRows($finalCount)
+
+		<td>date $finalCount (new)</td>
+
+    #if ($intakeDate.Date.isValid())
+        ## don't show the last entered value
+        #set ($value = "")
+    #else
+        #set ($value = $intakeDate.Date)
+    #end
+
+		<td>         
+            <input type="text" size="20" name="$intakeDate.Date.Key" 
+                    value="$value" />
+	</tr>
+
+                </table>
+
+                <p>
+                    <input type="submit" value="add date fields" 
+                        name="eventSubmit_doStep3_2badddate" />&nbsp;
+                    <input type="submit" value="remove date fields" 
+                        name="eventSubmit_doStep3_2bdeletedate" />
+                </p>
 
 			</td>
-			</tr>
-			</table>
-		</div>
+		</tr>
+	</table>
+</div>
 
-		<p class="functnbar"><input type="submit" value="Generate report" />&nbsp;<input type="submit" value="cancel" /></p>
-	</div>
-	<!-- Scarab - App -->
+<p class="functnbar">
+    <input type="submit" value="Generate report" 
+        name="eventSubmit_doStep3_2b" />
+    &nbsp;
+    <input type="submit" value="cancel" name="eventSubmit_doCancel" />
+</p>
 
-<!-- Structural Elements -->
-</td>
-</tr>
-</table>
-<!-- Structural Elements -->
 
-	<!-- SourceCast -->
-	<div id="footer">
-		<p>
-		<a href="#">Domain Home</a> |
-		<a href="#">Help</a> | 
-		<a href="#">Site FAQ</a> |
-		<a href="#">Feedback</a>
-		</p>
-	</div>
-	<!-- SourceCast -->
-
+#addReportHiddenInputs($report "reports,Step3_2b")
+$intake.declareGroups()
 </form>
-</body>
-</html>
+
+</div>
 
