hmmm, what's that page called agin? oh, yeah, 2.1.4.0...
would you believe? more changes - enhancements, even!

sedimentary evidence of teamwork - tracked by CVS!!

also changed / style sheet now has a

functbar for top of page (nw corner is graphically chipped off)
functbar2 for bottom of page (sw corner is graphically chipped off)

this change could be made to the whole app - (just change the name of the class in the bottom functionbar)...

Brian

--- a/www/ui/csi/style/main.css
+++ b/www/ui/csi/style/main.css
@@ -160,7 +160,7 @@ dd	{
 	padding: 3px;
 	}
 .functnbar2 th, .functnbar2 td {
-	color: black;
+	color: white;
 	padding-left: 2px;
 	padding-right: 2px;
 	}
