--- a/src/templates/screens/SelectModule.vm
+++ b/src/templates/screens/SelectModule.vm
@@ -68,7 +68,7 @@ $module.Description
 #else
 <p><strong class="alert">
 Sorry, you do not have access to select any other modules. Please
-<a href="$link.setPage("Login.vm")">Login</a> with an account that
+<a href="$link.setPage("Login.vm").addPathInfo($scarabG.Constant.NEXT_TEMPLATE, "SelectModule.vm")">Login</a> with an account that
 has permissions to select a Module.
 </strong></p>
 #end
