This had to be changed.  I am not sure whether this needs to be an issue stored in the session, so went with the simpler alternative.
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -6,7 +6,7 @@
 #if ($issueId)
    #set ($issue = $scarabR.Issue)
 #else
-   #set ($issue = $data.User.getReportingIssue($module))
+   #set ($issue = $module.NewIssue)
 #end
 
 #set ($templateInfo = $scarabR.IssueTemplateInfo)
