modified the process of storing the user in the session, so that it is keyed off a query parameter.  This will allow multiple browsers within the same session to enter issues.
moved cleanup code that is to be executed after an issue is entered or the
process is terminated into a method so that the several slightly different
versions could be kept uniform.

removed storing the start point of the issue entry process in the session.
This simple string parameter can be passed in the request parameters.
Added the parameter to $link, so it can be used as a general way to store
a screen that should be saved for several requests.

Issue number:
Obtained from:
Submitted by:
Reviewed by:
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -1,9 +1,8 @@
 <div id="wizard1" class="app">
 $page.setTitle("Enter New Issue")
 
+#set ($issue = $scarabR.ReportingIssue)
 #set ( $action = $link.setPage("entry,Wizard1.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry,Wizard3.vm") )
-#set ($module = $scarabR.CurrentModule)
-#set ($issue = $data.User.getReportingIssue($module))
 #set ($attrValues = $issue.ModuleAttributeValuesMap)
 
 <h2>$page.Title</h2>
@@ -37,8 +36,10 @@ $page.setTitle("Enter New Issue")
     </th>
     <td>
     #if ( $attVal.Attribute.AttributeType.Name == "string" )
+$attVal.Value<br>
         #attrValueText ( $attVal "50" )
     #else
+$attVal.Value<br>
         #attrValueLeafSelect ($attVal $field "")
     #end
      #attrValueErrorMsg ( $attVal $field )
